# OnlineShopBackend

./: Readme.md  main.py  pyproject.toml
OnlineShopBackend/: main.py  pyproject.toml
OnlineShopFrontend/: index.html  package-lock.json  package.json
db/: database.py
models/: category.py  checkout.py  order.py  order_item.py  product.py  user.py
routers/: checkout.py  checkouts.py  orders.py  products.py  users.py
